<resources>
    <string name="app_name">SampleApp</string>
    <string name="sign_up">SIGN UP</string>
    <string name="login">Login</string>
    <string name="login_with_your_sampleapp_account">Login with your SampleApp Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="error_email_empty">Email cannot be empty!</string>
    <string name="error_password_empty">Password cannot be empty</string>
    <string name="error_password_invalid">Password must be at least 4 characters long</string>
    <string name="full_name">Full Name</string>
    <string name="mobile">Mobile</string>
    <string name="done">Done</string>
    <string name="already_a_member">Already a member?</string>
    <string name="tos_part_1">By signing up, I agree to SampleApp\'s</string>
    <string name="tos_part_2">Terms of Service</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="error_full_name_empty">Full name cannot be empty!</string>
    <string name="error_mobile_no_invalid">Please enter a valid mobile no!</string>
    <string name="activate_pass">Activate Pass</string>
    <string name="hey_s">Hey %s</string>
    <string name="salutation_description">Welcome to the world of fitness freedom. Access all the activities listed
        below with your single Sample Pass.
    </string>
    <string name="reasons_to_buy_sample_app">REASONS TO BUY SAMPLE APP</string>
    <string name="h_num">#%s</string>
    <string name="explore">EXPLORE</string>
    <string name="s_n_s_activities">%s %s Activities</string>
</resources>
