<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content"
                                                   android:minWidth="320dp"
android:paddingBottom="8dp">


    <TextView
        android:text="@string/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvForgotPassword" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
        android:textSize="@dimen/text_style_large"
        android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content" android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:id="@+id/tilEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:text="@string/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnOk"
        style="@style/Button.Dialog"
        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
        android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tilEmail"/>

    <Button
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Button.Dialog"
        android:id="@+id/btnCancel" android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tilEmail" app:layout_constraintEnd_toStartOf="@+id/btnOk"
        android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>