<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".features.onboarding.ui.activities.LoginActivity">


    <TextView
        android:textAllCaps="true"
        android:text="@string/login_with_your_sampleapp_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tvTitle" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
        android:textSize="30sp"/>

    <com.google.android.material.textfield.TextInputLayout android:layout_width="0dp"
                                                           android:layout_height="wrap_content"
                                                           android:layout_marginTop="8dp"
                                                           app:layout_constraintTop_toBottomOf="@+id/tvTitle"
                                                           app:layout_constraintEnd_toEndOf="parent"
                                                           android:layout_marginEnd="8dp"
                                                           android:layout_marginRight="8dp"
                                                           android:id="@+id/tilEmail"
                                                           app:layout_constraintStart_toStartOf="parent"
                                                           android:layout_marginLeft="8dp"
                                                           android:layout_marginStart="8dp">
        <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:id="@+id/etEmail"
                  android:hint="@string/email" android:autofillHints="@string/email"
                  android:inputType="textEmailAddress"
                  tools:targetApi="o"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout android:layout_width="0dp"
                                                           android:layout_height="wrap_content"
                                                           android:layout_marginTop="8dp"
                                                           app:layout_constraintTop_toBottomOf="@+id/tilEmail"
                                                           app:layout_constraintEnd_toEndOf="parent"
                                                           android:layout_marginEnd="8dp"
                                                           android:layout_marginRight="8dp"
                                                           app:layout_constraintStart_toStartOf="parent"
                                                           android:layout_marginLeft="8dp"
                                                           android:layout_marginStart="8dp"
                                                           android:id="@+id/textInputLayout">
        <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:id="@+id/etPassword"
                  android:hint="@string/password"
                  android:inputType="textPassword"
                  tools:targetApi="o" android:importantForAutofill="no"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:text="@string/login"
        android:layout_width="0dp"
        android:textAllCaps="false"
        android:layout_height="wrap_content"
        android:id="@+id/btnLogin" android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" app:layout_constraintStart_toStartOf="parent"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>

    <TextView
        android:text="@string/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvForgotPassword" android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>